--- a/conf/app.conf
+++ b/conf/app.conf
@@ -129,7 +129,9 @@ module.static = github.com/revel/modules/static
 [dev]
 mongo.database = gig
 mongo.driver = mongodb-official
-mongo.path = mongodb://username:password@:123/username.mongodb.net
+# original: mongodb://username:password@:123/username.mongodb.net
+# mytemp: mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net
+mongo.path = mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net
 mongo.maxPool = 20
 
 file.cache = app/cache/
@@ -235,7 +237,9 @@ log.request.output = stdout
 #  [prod] section for documentation of the various settings
 [prod]
 mongo.database = gig
-mongo.path = mongodb://developer:password@127.0.0.1:32017/gig
+# atlast path mongodb+srv://vibhatha:<db_password>@ldfcluster001.zxegv.mongodb.net/
+# mongo.path = mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net/
+mong.path = mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net
 mongo.maxPool = 20
 
 file.cache = app/cache/
