updating configs and minor improvements

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -129,7 +129,9 @@ module.static = github.com/revel/modules/static
 [dev]
 mongo.database = gig
 mongo.driver = mongodb-official
+# TODO: DON"T INCLUDE SECRETS IN THE CONFIG FILE
 mongo.path = mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net
+# mong.path = mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000
 mongo.maxPool = 20
 
 file.cache = app/cache/
@@ -235,7 +237,9 @@ log.request.output = stdout
 #  [prod] section for documentation of the various settings
 [prod]
 mongo.database = gig
+# TODO: DON"T INCLUDE SECRETS IN THE CONFIG FILE
 mongo.path = mongodb+srv://vibhatha:13b0zAEEd5mNINbA@ldfcluster001.zxegv.mongodb.net
+# mong.path = mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000
 mongo.maxPool = 20
 
 file.cache = app/cache/
